		Removed debug logging for userrecord i/o
		During virusscan of file uploads, the mbtask timeout timer is
		set to one hour to support very long scans.

	mbsetup:
		Added menu entry 1.5.21 for setting maximum allowed logins.
		Added program locking, only one mbsetup can run at the same
		time.

	mbtask:
		On new installations sets max logins to 1.
		Now uses standard locking in ~/var/run

	mbmon:
		Added program locking, only one mbmon can run at the same time
		to prevent troubles with chat and sysop available.

	mbaff:
		Added program locking to prevent that more than one mbaff can
		run at the same time.

	mball:
		Added program locking to prevent that more than one mball can
		run at the same time.

	mbfile:
		Added program locking to prevent that more than one mbfile can
		run at the same time.

	mbuser:
		Added program locking to prevent that more than one mbuser can
		run at the same time.

	lang:
		Added language prompts 18 and 19.


v0.37.4		10-May-2003 - 12-Jul-2003

	upgrade:
		Check setting of menu 1.14.15

	general:
		Added check for inconv.h in configure script for UNIX98 
		character set conversion.

	common.a:
		The getheader function changed to support stone-age .pkt's.
		If the packet year has a Y2K bug, the year is fixed. This is
		only cosmetic for logging.
		If the zone info is missing, the zone is guessed from 2d aka
		matching against the system aka's. Then all mail in the .pkt
		file is also assumed to be in that zone if there is no zone
		info in the messages also.
		Guess what, these packets do still exist in Fidonet, it took
		5 years to find them! If you want to check, call 5:5/0
		Fixed compiler warning in network code.
		printable function now escapes all non-printable characters.
		In rfcmsg function the Cc: header is now treated as any other
		header to prevent a SIGSEGV when the headerline is empty.

	mbcico:
		The binkp transmitter does now escape the unsafe filename
		characters.