@@ -31,6 +31,8 @@ v0.37.5		12-Jul-2003
 	mbtask:
 		On new installations sets max logins to 1.
 		Now uses standard locking in ~/var/run
+		When idle, it now reports the time to the next event to be
+		seen in mbmon menu 1.
 
 	mbmon:
 		Added program locking, only one mbmon can run at the same time
